fix gaps

--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -1,7 +1,7 @@
 .main {
   display: grid;
   grid-template-columns: repeat(auto-fit, 200px);
-  gap: $cards-gap;
+  gap: 50px $cards-gap;
   margin: 0 auto;
   max-width: $card-width * 4 + $cards-gap * 8;
 }
