--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,4 +1,4 @@
 
 $moyo-color: #00acdc;
 $card-width: 200px;
-$cards-gap: 24px;
+$cards-gap: 48px;
